# whatdoing

./: .gitignore  README.md  pyproject.toml
docs/plans/: 2026-02-27-user-customization-design.md  2026-02-27-user-customization-plan.md
scripts/: install-public-safety-hook.sh  public-safety-audit.sh
src/whatdoing/: __init__.py  app.py  app.tcss  config.py  dashboard.py  models.py  parser.py  themes.py
src/whatdoing/screens/: __init__.py  dashboard.py  guide.py  journal.py  project.py  scratchpad.py
src/whatdoing/services/: __init__.py  docker.py  files.py  git.py  journal.py
src/whatdoing/widgets/: __init__.py
