[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "whatdoing"
version = "2.2.1"
description = "Terminal dashboard for tracking what you're working on"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "textual>=0.86.0",
    "pyyaml>=6.0",
]

[project.scripts]
whatdoing = "whatdoing.app:main"

[project.optional-dependencies]
images = ["textual-image>=0.7.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/whatdoing"]
